--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,13 @@
                 <img src="images/1.jpg" class="map__main" ondragstart="return false;" ondrop="return false;">
             </div>
         </div>
+        <script src="js/objects/PriorityQueue.js"></script>
+        <script src="js/objects/graph.js"></script>
         <script src="js/config/mapping.js"></script>
         <script src="js/config/graph.js"></script>
         <script src="js/config/coordsMapping.js"></script>
         <script src="js/utils/moveEvent.js"></script>
         <script src="js/utils/roadsMapping.js"></script>
-        <script src="js/utils/dijkstra.js"></script>
         <script src="js/index.js"></script>
     </body>
 </html>
